--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,8 @@
    font-style: normal;
  }
  ul{
+   margin: 0;
+   padding: 0;
     list-style-type: none;
  }
  .visually-hidden{
@@ -129,7 +131,24 @@
      }
      .link:hover{
         color: var(--color-brend-light);
-        font-weight: 600;
+     }
+     /*header*/
+     .header-container{
+      display: flex;
+      align-items: center;
+      gap: 40px;
+     }
+     .header-nav{
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      gap: 40px;
+     }
+     .header-menu{
+      display: flex;
+      gap: 64px;
+      flex-grow: 1;
+      justify-content: center;
      }
      /*hero*/
      .hero-section{
@@ -146,13 +165,20 @@
         color: var(--color-brend-light);
      }
      /*advantages-list*/
+     .advantages-section{
+      padding: 16px 0;
+      background-color: var(--color-brend-light);
+     }
      .advantages-list{
-        color: var(--color-primary-light);
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
         background-color: var(--color-brend-light);
      }
      .advantages-item{
       font-size: 20px;
       font-weight: 300px;
+      color: var(--color-primary-light);
      }
      .section-title{
       font-size: 64px;
