--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,10 @@
 :root{
     --color-primary-dark:#31261a;
     --color-primary-light:#faf4ea;
-    --color-brend-light: #819b57;
+    --color-brend-normal: #819b57;
     --color-brend-dark: #425929;
+    --color-brend-light:#cfcfbc;
+    --color-secondary-dark:#A28268;
  }
  /*base*/
  *{
@@ -76,6 +78,7 @@
  }
  body{
     color: var(--color-primary-dark);
+    background-color: var(--color-primary-light);
     font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -115,8 +118,8 @@
    padding: 16px 32px;
     color: var(--color-primary-light);
     font-weight: 600;
-    background-color: var(--color-brend-light);
-    border: 2px solid var(--color-brend-light);
+    background-color: var(--color-brend-normal);
+    border: 2px solid var(--color-brend-normal);
     border-radius: 8px;
     cursor: pointer;
 }
@@ -130,7 +133,7 @@
         text-decoration: none;
      }
      .link:hover{
-        color: var(--color-brend-light);
+        color: var(--color-brend-normal);
      }
      /*header*/
      .header-container{
@@ -153,6 +156,10 @@
      /*hero*/
      .hero-section{
       padding: 272px 0;
+      background-image: url("../images/hero-section-background.jpg");
+      background-repeat: no-repeat;
+      background-position: center top;
+      background-size: cover;
      }
      .hero-title{
       margin-bottom: 0;
@@ -162,18 +169,18 @@
         font-weight: 900;
      }
      .hero-title .accent{
-        color: var(--color-brend-light);
+        color: var(--color-brend-normal);
      }
      /*advantages-list*/
      .advantages-section{
       padding: 16px 0;
-      background-color: var(--color-brend-light);
+      background-color: var(--color-brend-normal);
      }
      .advantages-list{
       display: flex;
       justify-content: space-between;
       gap: 40px;
-        background-color: var(--color-brend-light);
+        background-color: var(--color-brend-normal);
      }
      .advantages-item{
       font-size: 20px;
@@ -184,6 +191,9 @@
       font-size: 64px;
       font-weight: 900;
       line-height: 1.3;
+     }
+     .section-title.centered{
+      text-align: center;
      }
      .section-title .accent{
         color: var(--color-brend-dark);
@@ -204,7 +214,7 @@
       margin-bottom: 42px;
      }
      .traditions-text .brand{
-         color: var(--color-brend-light);
+         color: var(--color-brend-normal);
          font-weight: 600;
      }
      .traditions-text .uppercase{
@@ -215,7 +225,20 @@
      }
      /*chefs-section*/
      .chefs-title{
-      margin-bottom: 80px;
+      margin:0 auto 80px;
+      max-width: 520px;
+     }
+     .chefs-title::before,
+     .chefs-title::after{
+      display: block;
+      width: 352px;
+      border: 2px solid #cfcfbc;
+      content: '';
+     }
+     .chef-foto{
+      border-radius:4px 4px 4px 200px;
+      box-shadow: -16px 16px 0 0 var(--color-primary-light),
+       -16px 16px 0 2px var(--color-secondary-dark);
      }
      .chef-title{
       font-size: 40px;
@@ -229,6 +252,8 @@
      }
      .format-card{
       padding: 24px;
+      height: 444px;
+      background-image: linear-gradient(180deg,rgba(49,38,26,0) 55.21%,rgba(49,38,26,0.71) 72.92%,var(--color-primary-dark) 100%);
       border: 1px solid lightgrey;
       border-radius: 16px;
      }
@@ -255,8 +280,15 @@
       text-decoration: none;
      }
      .address-link:hover{
-      color: var(--color-brend-light)
+      color: var(--color-brend-normal)
      }
      .address-copyright{
       font-size: 14px;
+     }
+     .footer{
+      background-color: var(--color-primary-dark);
+      background-image: url("../images/footer-background.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
      }
