--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,9 @@
     --color-secondary-dark:#A28268;
  }
  /*base*/
- *{
+ *::before,
+ *::after
+ {
    box-sizing: border-box;
  }
  body{
@@ -87,6 +89,9 @@
  }
  h1,h2,h3,h4,h5,h6,p{
    margin-top: 0;
+ }
+ a{
+   display: inline-block;
  }
  address{
    font-style: normal;
@@ -235,6 +240,17 @@
       border: 2px solid #cfcfbc;
       content: '';
      }
+     .chefs-list{
+      display: flex;
+      gap: 40px 30px;
+     }
+     .chefs-item{
+      flex: 1;
+     }
+     .chef-card{
+      display: flex;
+      gap: 30px;
+     }
      .chef-foto{
       border-radius:4px 4px 4px 200px;
       box-shadow: -16px 16px 0 0 var(--color-primary-light),
@@ -245,7 +261,18 @@
       font-weight: 600;
       margin-bottom: 16px;
      }
+     .chef-text p{
+      margin-bottom: 24px;
+     }
+     .chef-text p:last-child{
+      margin-bottom: 0;
+     }
      /*format section*/
+     .formats-container{
+      display: flex;
+      align-items: center;
+      gap: 32px;
+     }
      .formats-list{
       display: flex;
       gap: 20px;
@@ -273,6 +300,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-shrink: 0;
       width: 44px;
       height: 44px;
       padding: 0;
@@ -287,10 +315,47 @@
          fill: var(--color-primary-light);
         }
      /*contact section*/
+     .contact-section{
+      padding-bottom: 96px;
+     }
+     .contact-container{
+      display: flex;
+      gap: 32px ;
+     }
      .contact-title{
       margin-bottom: 16px;
      }
+     .contact-map{
+      flex-shrink: 0;
+      border-radius: 16px;
+      border: none;
+     }
      /*footer*/
+     .footer{
+      padding: 32px 0;
+     }
+     .footer-container{
+      display: flex;
+      gap: 20px;
+     }
+     .footer-nav{
+      display: flex;
+      flex-basis: 50%;
+      gap: 20px;
+     }
+     .footer-logo,
+     .footer-menu{
+      flex-grow: 1;
+     }
+     .address-list,
+     .address-info{
+      flex-grow: 1;
+     }
+     .footer-address{
+      display: flex;
+      flex-basis: 50%;
+      gap: 20px;
+     }
      .address-link{
       color: var(--color-primary-light);
       font-family: 16px;
