--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,115 +1,16 @@
-@font-face {
-   font-display: swap;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 300;
-   src: url('../fonts/poppins-v24-latin-300.eot');
-   src: url('../fonts/poppins-v24-latin-300.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/poppins-v24-latin-300.woff2') format('woff'),
-      url('../fonts/poppins-v24-latin-300.woff') format('woff'),
-      url('../fonts/poppins-v24-latin-300.ttf') format('truetype'),
-      url('../fonts/poppins-v24-latin-300.svg#Poppins') format('svg');
-}
-@font-face {
-   font-display: swap;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 400;
-   src: url('../fonts/poppins-v24-latin-regular.eot');
-   src: url('../fonts/poppins-v24-latin-regular.eot?#iefix') format('embedded-opentype'),
-      /* IE6-IE8 */
-      url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'),
-      /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url('../fonts/poppins-v24-latin-regular.woff') format('woff'),
-      /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-      url('../fonts/poppins-v24-latin-regular.ttf') format('truetype'),
-      /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-      url('../fonts/poppins-v24-latin-regular.svg#Poppins') format('svg');
-   /* Legacy iOS */
-}
-@font-face {
-   font-display: swap;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 600;
-   src: url('../fonts/poppins-v24-latin-600.eot');
-   /* IE9 Compat Modes */
-   src: url('../fonts/poppins-v24-latin-600.eot?#iefix') format('embedded-opentype'),
-      /* IE6-IE8 */
-      url('../fonts/poppins-v24-latin-600.woff2') format('woff2'),
-      /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url('../fonts/poppins-v24-latin-600.woff') format('woff'),
-      /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-      url('../fonts/poppins-v24-latin-600.ttf') format('truetype'),
-      /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-      url('../fonts/poppins-v24-latin-600.svg#Poppins') format('svg');
-   /* Legacy iOS */
-}
-@font-face {
-   font-display: swap;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 900;
-   src: url('../fonts/poppins-v24-latin-900.eot');
-   /* IE9 Compat Modes */
-   src: url('../fonts/poppins-v24-latin-900.eot?#iefix') format('embedded-opentype'),
-      /* IE6-IE8 */
-      url('../fonts/poppins-v24-latin-900.woff2') format('woff2'),
-      /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url('../fonts/poppins-v24-latin-900.woff') format('woff'),
-      /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-      url('../fonts/poppins-v24-latin-900.ttf') format('truetype'),
-      /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-      url('../fonts/poppins-v24-latin-900.svg#Poppins') format('svg');
-   /* Legacy iOS */
-}
 
-:root{
-    --color-primary-dark:#31261a;
-    --color-primary-light:#faf4ea;
-    --color-brend-normal: #819b57;
-    --color-brend-dark: #425929;
-    --color-brend-light:#cfcfbc;
-    --color-secondary-dark:#A28268;
- }
- /*base*/
- *,
- *::before,
- *::after
- {
-   box-sizing: border-box;
- }
- body{
-    color: var(--color-primary-dark);
-    background-color: var(--color-primary-light);
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.5;
-    margin: 0;
- }
- h1,h2,h3,h4,h5,h6,p{
-   margin-top: 0;
- }
- a{
-   display: inline-block;
- }
- address{
-   font-style: normal;
- }
- ul{
-   margin: 0;
-   padding: 0;
-    list-style-type: none;
- }
- .visually-hidden{
-   position: absolute;
-   left: -10000px;
-   top: auto;
-   width: 1px;
-   height: 1px;
-   overflow: hidden;
- }
+@import'./utils/fonts.scss';
+@import'./utils/variables.scss';
+
+@import'./base.scss';
+
+@import'./utils/utils.scss';
+
+@import'./components/buttons.scss';
+@import'./components/links.scss';
+@import'./components/header.scss';
+@import'./components/hero-section.scss';
+@import'./utils/mixins.scss';
  .section{
    padding: 48px 0;
  }
@@ -119,70 +20,13 @@
    margin: 0 auto;
    padding: 0 24px;
  }
- /*button*/
- .button {
-   padding: 16px 32px;
-    color: var(--color-primary-light);
-    font-weight: 600;
-    background-color: var(--color-brend-normal);
-    border: 2px solid var(--color-brend-normal);
-    border-radius: 8px;
-    cursor: pointer;
-}
-     .button:hover{
-        color: var(--color-brend-dark);
-        background-color:transparent;
-      }
-     /*.button[disabled]{
-      color: gray;
-      background-color: lightgrey;
-      border-color: currentColor;
-     }*/
-     /*link*/
-     .link{
-        color: var(--color-primary-light);
-        text-decoration: none;
-        transition: color 0.3s;
-     }
-     .link:hover{
-        color: var(--color-brend-normal);
-     }
-     /*header*/
-     .header-container{
-      display: flex;
-      align-items: center;
-      gap: 40px;
-     }
-     .header-nav{
-      display: flex;
-      align-items: center;
-      flex-grow: 1;
-      gap: 40px;
-     }
-     .header-menu{
-      display: flex;
-      gap: 64px;
-      flex-grow: 1;
-      justify-content: center;
-     }
-     /*hero*/
-     .hero-section{
-      padding: 272px 0;
-      background-image: url("../images/hero-section-background.jpg");
-      background-repeat: no-repeat;
-      background-position: center top;
-      background-size: cover;
-     }
-     .hero-title{
-      margin-bottom: 0;
-        color: var(--color-primary-light);
-        text-align: center;
-        font-size: 128px;
-        font-weight: 900;
-     }
-     .hero-title .accent{
-        color: var(--color-brend-normal);
-     }
+
+ 
+     
+     
+    
+    
+     
      /*advantages-list*/
      .advantages-section{
       padding: 16px 0;
@@ -295,6 +139,10 @@
       gap: 20px;
      }
      .format-card{
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
       padding: 24px;
       height: 444px;
       background-image: linear-gradient(180deg,rgba(49,38,26,0) 55.21%,rgba(49,38,26,0.71) 72.92%,var(--color-primary-dark) 100%);
@@ -304,16 +152,26 @@
      .format-card:hover{
       transform: scale(1.05);
      }
+     .format-image{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+     }
      .formats-title{
       margin-bottom: 80px;
      }
      .format-title{
       font-size: 24px;
       font-weight: 600;
+      color: var(--color-primary-light);
      }
      .format-text{
       font-size: 14px;
       font-weight: 300;
+      color: var(--color-primary-light);
      }
      /*carousel*/
      .carousel-button{
